# Solvable

./: .env.example  .gitignore  README.md  config.example.yaml  dashboard.py  learn  learn_common.py  learn_dropbox.py  learn_email.py  learn_email_imap.py  learner_config.py  migrate_db.py  recall.py  requirements.txt  setup.sh  solvable
learner-tui/: Cargo.toml
learner-tui/docs/: ARCHITECTURE.md  SUBPROJECT_1_WIDGET_SPEC.md
learner-tui/src/: app.rs  main.rs  theme.rs  ui.rs
learner-tui/src/io_layer/: db.rs  env_store.rs  mod.rs  oauth.rs  sysinfo.rs
learner-tui/src/screens/: confluence.rs  issues.rs  learnings.rs  mod.rs  portal.rs  research.rs  settings.rs  solutions.rs  solve.rs  welcome.rs
learner-tui/src/widgets/: button.rs  dropdown.rs  mod.rs  search.rs  slider.rs  tab_bar.rs  text_input.rs  tree.rs
scripts/: generate_sample_data.py  screenshots.tape
tests/: conftest.py  test_email_fetch_order.py  test_imap_credentials.py  test_parallel_tasks.py  test_spam_filter.py  test_watch_mode.py
