[package]
name = "solvable"
version = "0.2.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = "0.4"
oauth2 = "4"
tokio = { version = "1", features = ["rt", "net", "time", "macros"] }
open = "5"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1"
url = "2"
